# paper-betting-tracker

./: .gitignore  README.md  constants.py  csv_editer.py  edit_data.py  fetch_odds.py  find_bets.py  odds.csv  pyproject.toml  reader.ipynb  reader2.ipynb  requirements.txt  results.py  sportsdb_results.py  theodds_results.py
.github/workflows/: hourly-bet-finder.yml  results.yml  update-output.yml  update-profit-charts.yml
analysis/: betting_utils.py  bins.py  ev_analysis.py  monte_carlo_sim.py  null_sim.py  roi.py  segmentation.py  standard_metrics.py  strategy_definitions.py
analysis/calculations/: bins.py  monte_carlo_sim.py  profit_col.py  profit_over_time.py  roi.py  strategy_results.py
analysis/no_ev_mc/: no_ev_mc.py
analysis/profit_over_time/: profit_over_time.py
analysis/visualizations/: monte_carlo_plots.py  profit_charts.py
codebase/: constants.py
codebase/analysis/: bins.py  no_ev_mc.py  profit_over_time.py  profit_vs_ev.py  profit_vs_ev_pin.py  profit_vs_zscore.py  rmse.py  roi.py  roi_v2.py  (+1 more)
config/: analysis_config.py  api_config.example.py  api_config.example.yaml  api_config.py  api_config.yaml  api_config_local.example.py  api_config_local.py  discord_config.py  discord_config_local.example.py  fetch_config.py  fetch_config.yaml  results_config.py
data/: master_avg_bets.csv  master_avg_full.csv  master_mod_zscore_bets.csv  master_mod_zscore_full.csv  master_nc_avg_bets.csv  master_nc_avg_full.csv  master_nc_mod_zscore_bets.csv  master_nc_mod_zscore_full.csv  master_nc_random_bets.csv  master_nc_random_full.csv  master_pin_bets.csv  master_pin_full.csv  master_random_bets.csv  master_random_full.csv  master_zscore_bets.csv  master_zscore_full.csv  nc_avg_bets.csv  nc_avg_full.csv  nc_avg_minimal.csv  nc_mod_zscore_bets.csv  nc_mod_zscore_full.csv  nc_mod_zscore_minimal.csv  nc_random_bets.csv  nc_random_full.csv  nc_random_minimal.csv
fetch_odds/: fetch_configs.py  fetch_odds.py
find_bets/: betting_configs.py  betting_strategies.py  data_processing.py  file_management.py  find_bets.py  summary_creation.py
old_data/: master_nc_zscore_bets.csv
results/: results.py  results_configs.py  sportsdb_results.py  theodds_results.py
src/: constants.py
testing/: test_fetch_odds.py  testing_configs.py
website/: index.html
(+127 files in other folders)
